--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -6,7 +6,7 @@
             <div class="col-md-12 col-sm-12 col-xs-12 mt-25">
                 <h1 class="display-2 text-white font-weight-light py-3 text-uppercase text-center">{{site.greeting}}</h1>
                 <h5 class="lead text-uppercase py-3 font-weight-light text-center font-weight:bold">{{site.headline}}</h5>
-                <h5 class="lead text-uppercase py-3 font-weight-light text-center font-weight:bold betweenHR">{{site.author}}</h5>
+                <h5 class="lead text-uppercase py-3 font-weight-light text-center font-weight:bold betweenHR">{{site.author.name}}</h5>
             </div>
         </div>
     </div>
