--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,7 +7,7 @@
     <link rel="icon" href="{{ site.baseurl}}/assets/img/favicon.png" />
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <link rel="stylesheet" href="{{page.url}}/assets/css/style.css">
+    <link rel="stylesheet" href="{{ site.baseurl}}/assets/css/style.css">
 
     <link rel="preconnect" href="https://fonts.gstatic.com">    
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,500;0,900;1,500;1,900&family=Source+Code+Pro&family=Source+Sans+Pro:ital,wght@0,300;0,400;1,400;1,900&display=swap" rel="stylesheet"> 
