--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -1,6 +1,6 @@
 <!--Hero section begins-->
 <section class="px-md-5">
-    <div class="bgimage hero" style="
+    <div class="bgimage hero heroImage" style="
     background: url('{{ site.baseurl}}/assets/images/herobg.jpg');">
         <div class="row mx-0 px-0">
             <div class="col-md-12 col-sm-12 col-xs-12 mt-25">
