--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -1,7 +1,11 @@
 <!--Hero section begins-->
 <section class="px-md-5">
     <div class="bgimage hero heroImage" style="
-    background: url('{{ site.baseurl}}/assets/images/herobg.jpg');">
+    background: url('{{ site.baseurl}}/assets/images/herobg.jpg');    background-repeat: no-repeat;
+	background-position: center;
+	background-size:cover;
+	background-attachment: fixed;
+    filter: grayscale(50%) contrast(70%);">
         <div class="row mx-0 px-0">
             <div class="col-md-12 col-sm-12 col-xs-12 mt-25">
                 <h1 class="display-2 text-white font-weight-light py-3 text-uppercase text-center">{{site.greeting}}</h1>
