--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -2,7 +2,7 @@
 <section class="px-md-5">
     <div class="bgimage hero heroImage" style="
     background: url('{{ site.baseurl}}/assets/images/herobg.jpg');    background-repeat: no-repeat;
-	background-position: center;
+	background-position: bottom;
 	background-size:cover;
 	background-attachment: fixed;
     filter: grayscale(50%) contrast(70%);">
