--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -8,9 +8,9 @@
 	background-attachment: fixed;">
         <div class="row mx-0 px-0">
             <div class="col-md-12 col-sm-12 col-xs-12 mt-25">
-                <h1 class="display-2 text-white font-weight-light py-3 text-uppercase text-center">{{site.greeting}}</h1>
-                <h5 class="lead text-uppercase py-3 font-weight-light text-center font-weight:bold">{{site.headline}}</h5>
-                <h5 class="lead text-uppercase py-3 font-weight-light text-center font-weight:bold betweenHR">{{site.author.name}}</h5>
+                <h1 class="display-2 text-white font-weight-light py-3 text-uppercase text-center text-shadow">{{site.greeting}}</h1>
+                <h5 class="lead text-uppercase py-3 text-shadow text-center">{{site.headline}}</h5>
+                <h5 class="lead text-uppercase py-3 font-weight-light text-center text-shadow betweenHR">{{site.author.name}}</h5>
             </div>
         </div>
     </div>
