--- a/_includes/serie.html
+++ b/_includes/serie.html
@@ -1,5 +1,5 @@
-{% for serie in site.instruments.series %}
-    {% for model in serie %}
+PROVA
+
+{% for model in site.instruments.series.pragma %}
         <h2>{{model.title}}</h2>
-    {% endfor %}
 {% endfor %}
