--- a/_includes/serie.html
+++ b/_includes/serie.html
@@ -11,10 +11,8 @@ PROVA
 {% assign itemsBySerie = site.instruments | group_by_exp:"instrument", "instrument.taxonomy.serie" %}
 {% for serie in itemsBySerie %}
   <h1>{{ serie.name }}</h1>
-  {% assign postsByMonth = year.items | group_by_exp:"post", "post.date | date: '%B'" %}
-
 <ul>
-  {% for model in serie.items %}
+  {% for item in serie.items %}
     <li>
       <a href="{{ item.url }}">{{ item.title }}</a>
       <br>{{ item.excerpt }}
