--- a/_includes/listModels.html
+++ b/_includes/listModels.html
@@ -12,7 +12,7 @@
           <div class="card-deck">
 
         {% for model in serie.items %}
-          {% include model.html %}
+          {% include cardModel.html %}
         {% endfor%}
         </div></div>
     {% endfor %}
