--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -4,7 +4,7 @@
 <body>
 {% include navigation.html %}
 {% include hero.html %}
-{% include serie.html %}
+{% include listModels.html %}
 
 </body>
 </html>
