--- a/_layouts/serie.html
+++ b/_layouts/serie.html
@@ -6,7 +6,7 @@ layout: default
 
 
   <div class="row mt-5 mb-5  sticky-top text-center" style="background:white; top:50px">
-    <h2 class="display-3 mb-5 text-center"><span class="text-muted">Serie</span> {{ page.serie }}</h2>
+    <h2 class="display-3 mb-5 text-center"><span class="text-muted">Serie</span> {{ page.tag }}</h2>
 
   </div>
     
@@ -27,7 +27,7 @@ layout: default
                   </blockquote>
                 </div>
                 <div class="row m-3">
-                    <a class="btn btn-outline-primary btn-block">Read more about the {{ page.serie }} serie</a>
+                    <a class="btn btn-outline-primary btn-block">Read more about the {{ page.tag }} serie</a>
                 </div>
             </div>
         </div>
@@ -38,16 +38,16 @@ layout: default
       <div class="row"><h3 class="display-4">Instruments</h3></div>
       <div class="card-deck">
 
-        {% for model in site.tags[page.taxonomy.serie] %}
+        {% for post in site.tags[page.tag] %}
 
     <div class="card">
-      <div class="card-header bg-transparent">{{ model.taxonomy.model }}</div>
+      <div class="card-header bg-transparent">{{ post.taxonomy.model }}</div>
     <img class="card-img-top" src="https://images.unsplash.com/photo-1592051148515-c5c06b3f919a?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1234&q=80" alt="Card image cap">
     <div class="card-body">
-      <h5 class="card-title">{{ model.name }} </h5>
-      <p class="card-text">{{ model.excerpt }}</p>
+      <h5 class="card-title">{{ post.name }} </h5>
+      <p class="card-text">{{ post.excerpt }}</p>
     </div>
-    <div class="card-footer bg-transparent"><a href="{{ model.url }}">Read more</a></div>
+    <div class="card-footer bg-transparent"><a href="{{ post.url }}">Read more</a></div>
   </div>
     {% endfor%}
     </div></div>
