--- a/_layouts/serie.html
+++ b/_layouts/serie.html
@@ -40,7 +40,7 @@ layout: default
       <div class="row"><h3 class="display-4">Instruments</h3></div>
       <div class="card-deck">
 
-        {% for post in site.tags[page.tag] %}
+        {% for post in site.categories[page.category] %}
 
     <div class="card">
       <div class="card-header bg-transparent">{{ post.taxonomy.model }}</div>
@@ -54,3 +54,5 @@ layout: default
     {% endfor%}
     </div></div>
 </section>
+
+
