--- a/_layouts/serie.html
+++ b/_layouts/serie.html
@@ -29,7 +29,7 @@ layout: default
                   </blockquote>
                 </div>
                 <div class="row m-3">
-                    <a class="btn btn-outline-primary btn-block">Read more about the {{ page.tag }} serie</a>
+                  {{ page.content }}
                 </div>
             </div>
         </div>
