--- a/_layouts/serie.html
+++ b/_layouts/serie.html
@@ -31,7 +31,7 @@ layout: default
             </div>
         </div>
         <div class="row m-3">
-          {{ page.content }}
+          <p class="display">{{ page.content }}</p>
         </div>
 
 
