--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -8,7 +8,12 @@
 
 
 {% for category in site.categories %}
-  <span class="entry-categories"><a href="{{ page.category-url | absolute_url }}" rel="category">{{ page.category }}</a></span>{% unless forloop.last %},{% endunless %}
+  <h2>{{ category[0] }}</h2>
+  <ul>
+    {% for post in category[1] %}
+      <li><a href="{{ post.url }}">{{ post.name }}</a></li>
+    {% endfor %}
+  </ul>
 {% endfor %}
 
 </body>
