--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -31,6 +31,16 @@
   {% for category in site.categories %}
     <p>{{ category.title }}</p>
   {% endfor %}
+
+  <h5>Categories</h5>
+{% for category in site.categories %}
+    {% assign cat = category[0] %}
+    <h6><a href="#">{{ cat }}</a></h6>
+    <h6><a href="#">{{ cat.title }}</a></h6>
+    {% for post in site.categories[cat] %}
+        <a href="{{ post.url }}">{{ post.name }}</a> <small>{{ post.excerpt }}</small>
+    {% endfor %}
+{% endfor %}
 </section>
 
 </body>
