--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -34,7 +34,7 @@
 
   <h5>Categories</h5>
 {% for category in site.categories %}
-    {% assign cat = category[0] %}
+    {% assign cat = category.title %}
     <h6><a href="#">{{ cat }}</a></h6>
     {% for post in site.categories[cat] %}
         <a href="{{ post.url }}">{{ post.name }}</a> <small>{{ post.excerpt }}</small>
