--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -36,7 +36,7 @@
 {% for category in site.categories %}
     {% assign cat = category.title %}
     <h6><a href="#">{{ cat }}</a></h6>
-    {% for post in site.categories[cat] %}
+    {% for post in site.instruments.category[cat] %}
         <a href="{{ post.url }}">{{ post.name }}</a> <small>{{ post.excerpt }}</small>
     {% endfor %}
 {% endfor %}
