--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -36,8 +36,9 @@
 {% for category in site.categories %}
     {% assign cat = category.title %}
     <h6><a href="#">{{ cat }}</a></h6>
-    {% for post in site.instruments.category[cat] %}
-        <a href="{{ post.url }}">{{ post.name }}</a> <small>{{ post.excerpt }}</small>
+    {% for instrument in site.instruments | where "instrument.category", cat %}
+
+      <p>{{ instrument.name }}</p>
     {% endfor %}
 {% endfor %}
 </section>
