--- a/_layouts/detailView.html
+++ b/_layouts/detailView.html
@@ -8,11 +8,11 @@
 
         <h4 class="">Neck</h4>
         <p>
-            <span>{{ neck.material }}</span>
+            <span>{{ page.neck.material }}</span>
             <span class="text-muted">; width at nut:</span>
-            <span>{{ neck.width }}</span>
+            <span>{{ page.neck.width }}</span>
             <span class="text-muted">; thickness:</span>
-            <span>{{ neck.tickness }}</span>
+            <span>{{ page.neck.tickness }}</span>
         </p>
         <h4 class="">Body</h4>
         <h4 class="">Top</h4>
