--- a/_layouts/detailView.html
+++ b/_layouts/detailView.html
@@ -1,3 +1,9 @@
+<!doctype html>
+<html>
+{% include head.html %}
+<body class="bg-white">
+{% include navigation.html %}
+
 <section class="px-md-5">
 
 
@@ -33,3 +39,6 @@
 
 
 </section>
+
+</body>
+</html>
