--- a/_layouts/detailView.html
+++ b/_layouts/detailView.html
@@ -3,6 +3,7 @@
 {% include head.html %}
 <body class="bg-white">
 {% include navigation.html %}
+{% include detailHero.html %}
 
 <section class="px-md-5">
 
