--- a/_layouts/detailView.html
+++ b/_layouts/detailView.html
@@ -15,11 +15,11 @@
 
         <h4 class="">Neck</h4>
         <p>
-            <span>{{ page.neck.material }}</span>
+            <span>{{ page.construction.neck.material }}</span>
             <span class="text-muted">; width at nut:</span>
-            <span>{{ page.neck.width }}</span>
+            <span>{{ page.construction.neck.width }}</span>
             <span class="text-muted">; thickness:</span>
-            <span>{{ page.neck.tickness }}</span>
+            <span>{{ page.construction.neck.tickness }}</span>
         </p>
         <h4 class="">Body</h4>
         <h4 class="">Top</h4>
