--- a/_layouts/detailView.html
+++ b/_layouts/detailView.html
@@ -5,7 +5,7 @@
 {% include navigation.html %}
 {% include detailHero.html %}
 
-<section class="px-md-5">
+<section class="px-md-5 pt-5">
 
 
 <section class="row">
@@ -17,9 +17,9 @@
         <p>
             <span>{{ page.construction.neck.material }}</span>
             <span class="text-muted">; width at nut:</span>
-            <span>{{ page.construction.neck.width }}</span>
+            <span>{{ page.construction.neck.nutWidth }}</span>
             <span class="text-muted">; thickness:</span>
-            <span>{{ page.construction.neck.tickness }}</span>
+            <span>{{ page.construction.neck.thickness }}</span>
         </p>
         <h4 class="">Body</h4>
         <h4 class="">Top</h4>
