--- a/_includes/detailHero.html
+++ b/_includes/detailHero.html
@@ -1,7 +1,7 @@
 <!--Hero section begins-->
 <section class="px-md-5">
     <div class="bgimage hero heroImage" style="
-    background: url('{{ site.baseurl}}/assets/images/herobg.jpg');    
+    background: url('{{ site.baseurl}}/assets/images/instruments/{{page.name}}/hero.png');    
     background-repeat: no-repeat;
 	background-position: bottom;
 	background-size:cover;
