--- a/_layouts/detailView.html
+++ b/_layouts/detailView.html
@@ -21,10 +21,25 @@
             <span class="text-muted">; thickness:</span>
             <span>{{ page.construction.neck.thickness }}</span>
         </p>
+        <p>{{page.construction.fretboard.thickness}} fretboard in {{page.construction.fretboard.material}} <span class="text-muted">with a </span>{{page.construction.fretboard.radius}} <span class="text-muted">radius</span>. <span class="text-muted">Frets:</span> {{page.construction.fretboard.frets}}</p>
         <h4 class="">Body</h4>
-        <h4 class="">Top</h4>
+        <p>
+            {{page.construction.body.thickness}} <span class="text-muted">body in </span> {{page.construction.body.material }}.
+        </p>
         <h4 class="">Electronics</h4>
+        <p>
+            {{page.construction.electronics.wiring}}
+        </p>
+        <p>
+            {{page.construction.electronics.pickup}}
+        </p>
+        
         <h4 class="">Finish</h4>
+        <p class="">{{page.construction.finish}}</p>
+
+        <h4 class="">Hardwareh</h4>
+        <p class=""><span class="text-muted">Strap lock:</span>{{page.construction.hardware.locks}}</p>
+        <p class=""><span class="text-muted">Bridge:</span>{{page.construction.hardware.bridge}}</p>
 
     </section>
 
