--- a/_layouts/detailView.html
+++ b/_layouts/detailView.html
@@ -13,7 +13,7 @@
     <section class="col-md-4">
         <h2 class="display">Specs</h2>
 
-        <h4 class="">Neck</h4>
+        <h4 class="mt-5">Neck</h4>
         <p>
             <span>{{ page.construction.neck.material }}</span>
             <span class="text-muted">; width at nut:</span>
@@ -22,11 +22,11 @@
             <span>{{ page.construction.neck.thickness }}</span>
         </p>
         <p>{{page.construction.fretboard.thickness}} fretboard in {{page.construction.fretboard.material}} <span class="text-muted">with a </span>{{page.construction.fretboard.radius}} <span class="text-muted">radius</span>. <span class="text-muted">Frets:</span> {{page.construction.fretboard.frets}}</p>
-        <h4 class="">Body</h4>
+        <h4 class="mt-5">Body</h4>
         <p>
             {{page.construction.body.thickness}} <span class="text-muted">body in </span> {{page.construction.body.material }}.
         </p>
-        <h4 class="">Electronics</h4>
+        <h4 class="mt-5">Electronics</h4>
         <p>
             {{page.construction.electronics.wiring}}
         </p>
@@ -34,10 +34,10 @@
             {{page.construction.electronics.pickup}}
         </p>
         
-        <h4 class="">Finish</h4>
+        <h4 class="mt-5">Finish</h4>
         <p class="">{{page.construction.finish}}</p>
 
-        <h4 class="">Hardwareh</h4>
+        <h4 class="mt-5">Hardware</h4>
         <p class=""><span class="text-muted">Strap lock:</span>{{page.construction.hardware.locks}}</p>
         <p class=""><span class="text-muted">Bridge:</span>{{page.construction.hardware.bridge}}</p>
 
