--- a/_layouts/detailView.html
+++ b/_layouts/detailView.html
@@ -31,7 +31,7 @@
             {{page.construction.electronics.wiring}}
         </p>
         <p>
-            {{page.construction.electronics.pickup}}
+            {{page.construction.electronics.pickups}}
         </p>
         
         <h4 class="mt-5">Finish</h4>
