--- a/_layouts/detailView.html
+++ b/_layouts/detailView.html
@@ -10,7 +10,7 @@
 
 <section class="row">
 
-    <section class="col-md-4">
+    <section class="col-md-4 border-right">
         <h2 class="display">Specs</h2>
 
         <h4 class="mt-5">Neck</h4>
