--- a/_layouts/detailView.html
+++ b/_layouts/detailView.html
@@ -10,7 +10,7 @@
 
 <section class="row">
 
-    <section class="col-md-4 border-right">
+    <section class="col-md-3 border-right">
         <h2 class="display">Specs</h2>
 
         <h4 class="mt-5">Neck</h4>
@@ -44,10 +44,13 @@
     </section>
 
 
-    <section class="col-md-8">
+    <section class="col-md-6 lead">
             {{ content }}
     </section>
 
+    <section class="col-md-3">
+        .
+</section>
 
 
 </section>
