--- a/_layouts/detailView.html
+++ b/_layouts/detailView.html
@@ -45,7 +45,9 @@
 
 
     <section class="col-md-6 lead">
+        <div class="p-5">
             {{ content }}
+        </div>
     </section>
 
     <section class="col-md-3">
