--- a/_layouts/instrument.html
+++ b/_layouts/instrument.html
@@ -51,7 +51,7 @@
     </section>
 
     <section class="col-md-3">
-        {% include imageGallery.html folder="{{site.baseurl}}/assets/images/instruments/{{page.name}}" %}
+        {% include imageGallery.html folder="assets/images/instruments/{{page.name}}" %}
 </section>
 
 
