--- a/_layouts/instrument.html
+++ b/_layouts/instrument.html
@@ -51,7 +51,12 @@
     </section>
 
     <section class="col-md-3">
-        {% include imageGallery.html folder="assets/images/instruments/{{page.name}}" %}
+{% capture gallery_path %}assets/images/instrument/{{ page.name }}{% endcapture %}
+{% for image in site.static_files %}
+    {% if image.path contains gallery_path %}
+        <img src="{{ site.baseurl }}{{ image.path }}" alt="image" />
+    {% endif %}
+{% endfor %}
 </section>
 
 
