--- a/_layouts/instrument.html
+++ b/_layouts/instrument.html
@@ -51,12 +51,16 @@
     </section>
 
     <section class="col-md-3">
-{% capture gallery_path %}assets/images/instrument/{{ page.name }}{% endcapture %}
-{% for image in site.static_files %}
-    {% if image.path contains gallery_path %}
-        <img src="{{ site.baseurl }}{{ image.path }}" alt="image" />
-    {% endif %}
-{% endfor %}
+
+        <div class="image-gallery">
+            {% for image in site.static_files %}
+              {% if image.path contains '/path/to/images/' %}
+                <img src="{{ site.baseurl }}{{ image.path }}"/>
+              {% endif %}
+            {% endfor %}
+          </div>
+          
+          
 </section>
 
 
