--- a/_layouts/instrument.html
+++ b/_layouts/instrument.html
@@ -54,7 +54,9 @@
 
         <div class="image-gallery">
             {% for image in site.static_files %}
+              {% if image.path contains '{{page.name}}' %}
                 <img src="{{ site.baseurl }}{{ image.path }}"/>
+              {% endif %}
             {% endfor %}
           </div>
           
