--- a/_layouts/instrument.html
+++ b/_layouts/instrument.html
@@ -59,7 +59,7 @@
               {% endif %}
             {% endfor %}
           </div>
-          
+          <p>{{ site.baseurl}}/assets/images/instruments/{{page.name}}</p>
           <div class="image-gallery">
             {% for image in {{ site.baseurl}}/assets/images/instruments/{{page.name}} %}
                 <img src="{{ site.baseurl }}{{ image.path }}"/>
