--- a/_layouts/instrument.html
+++ b/_layouts/instrument.html
@@ -10,8 +10,8 @@
 
 <section class="row">
 
-    <section class="col-md-4 border-right">
-        <h2 class="display">Specs</h2>
+    <section class="col-md-6 border-right pr-5">
+        <h2 class="display">Specifications</h2>
 
         <h4 class="mt-5">Neck</h4>
         <p>
@@ -44,7 +44,7 @@
     </section>
 
 
-    <section class="col-md-8 lead">
+    <section class="col-md-6">
         <div class="p-5">
             {{ content }}
         </div>
