--- a/_includes/detailHero.html
+++ b/_includes/detailHero.html
@@ -1,5 +1,5 @@
 <!--Hero section begins-->
-<section class="px-md-5">
+<section class="">
     <div class="bgimage hero heroImage" style="
     background: url('{{ site.baseurl}}/assets/images/instruments/{{ page.images.header }}');    
     background-repeat: no-repeat;
