--- a/_includes/imageGallery.html
+++ b/_includes/imageGallery.html
@@ -1,12 +1,41 @@
-<div class ="image-gallery">
-  {% assign sorted = site.static_files | sort: 'date' | reverse %}
-  {% for file in sorted %}
-  {% if file.path contains include.folder %}
-    {% assign filenameparts = file.path | split: "/" %}
-      {% assign filename = filenameparts | last | replace: file.extname,"" %}
-       <div class="box"><a href="{{ file.path | relative_url }}" title="{{ filename }}">
-         <img src="{{ file.path | relative_url }}" alt="{{ filename }}"  class="img-gallery" />
-       </a></div>
+<style>
+   /*! div style */
+  .image-gallery {
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(auto-fill,minmax(200px, 1fr));
+    justify-content: center;
+    padding: 4px;
+  }
+
+  .box {
+      flex-basis: 25%;
+      width: 100%;
+      padding: 10px;
+      margin: 2px;
+  }
+
+  .img-gallery {
+	width: 100%;
+  height: 200px;
+	object-fit: cover;
+  transform: scale(1);
+  transition: all 0.3s ease-in-out;
+  &:hover {
+    transform: scale(1.05);
+  }
+
+</style>
+
+
+<div class="image-gallery">
+    {% for img in site.static_files %}
+    {% if img.path contains imgBasePath %}
+    <div class="box">
+        <a href="{{ site.imagesurl }}{{ img.path }}">
+          <img src="{{ site.imagesurl }}{{ img.path }} " alt="{{img.path}}"  class="img-gallery" />
+         </a>
+    </div>
     {% endif %}
-  {% endfor %}
- </div>
+    {% endfor %}
+  </div>
