--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 {% include head.html %}
-<body class="bg-white">
+<body class="bg-white3">
 {% include navigation.html %}
 {% include hero.html %}
 
