--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,5 +1,5 @@
 <!--Navigation Begins-->
-<nav class="site-header sticky-top py-1" style="background-color:#fff">
+<nav class="site-header sticky-top py-1 bg-white2">
     <div class="container d-flex flex-column flex-md-row justify-content-between">
       <a class="py-2" href="#">
           <img width="24" height="24" src="{{site.baseurl}}/{{site.logo}}">
