--- a/_includes/category.html
+++ b/_includes/category.html
@@ -1,6 +1,6 @@
 
   <div class="row mt-5 mb-5  sticky-top text-center">
-    <h2 class="display-3 mb-5 text-center"><span class="text-muted">{{cat.type}}</span> {{ cat.title }}</h2>
+    <h2 class="display-3 mb-5 text-center"><span class="text-muted">{{category.type}}</span> {{ category.title }}</h2>
 
   </div>
     
@@ -12,16 +12,16 @@
             <div class="col-md-4">
                 <div class="row m-3">
                 <blockquote class="blockquote">
-                    <p class="">{{ cat.blockquote.text }}</p>
+                    <p class="">{{ category.blockquote.text }}</p>
                     <footer class="blockquote-footer m-3"> 
-                        {{ cat.blockquote.author }},
+                        {{ category.blockquote.author }},
                         <cite title="Source Title">
-                            {{ cat.blockquote.source }}
+                            {{ category.blockquote.source }}
                         </cite></footer>
                   </blockquote>
                 </div>
             </div>
         </div>
         <div class="row m-3">
-          <p class="display">{{ cat.content }}</p>
+          <p class="display">{{ category.content }}</p>
         </div>
