--- a/_includes/category.html
+++ b/_includes/category.html
@@ -1,13 +1,12 @@
 
-  <div class="row mt-5 mb-5  sticky-top text-center">
+  <div class="row mt-5 mb-5">
     <h2 class="display-3 mb-5 text-center"><span class="text-muted">{{category.type}}</span> {{ category.title }}</h2>
 
   </div>
     
         <div class="row">
-            <div class="col-md-8">
-                <img class="bgimage bgimg" src="https://images.unsplash.com/photo-1601956349582-ba50bedaa8ea?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=2550&q=80">
-                
+            <div class="col-md-8">          
+                <p class="display">{{ category.content }}</p>
             </div>
             <div class="col-md-4">
                 <div class="row m-3">
@@ -21,7 +20,4 @@
                   </blockquote>
                 </div>
             </div>
-        </div>
-        <div class="row m-3">
-          <p class="display">{{ category.content }}</p>
         </div>
