--- a/_includes/category.html
+++ b/_includes/category.html
@@ -1,6 +1,6 @@
 
-  <div class="row mt-5 mb-5">
-    <h2 class="display-3 mb-5 text-center"><span class="text-muted">{{category.type}}</span> {{ category.title }}</h2>
+  <div class="row">
+    <h2 class="display-3 mb-3"><span class="text-muted">{{category.type}}</span> {{ category.title }}</h2>
 
   </div>
     
