--- a/_includes/instrumentCard.html
+++ b/_includes/instrumentCard.html
@@ -1,4 +1,4 @@
-<div class="card bg-transparent border-0 p-5" style="border-radius: 0;">
+<div class="card bg-transparent border-0 m-4" style="border-radius: 0;">
     <a href="{{ instrument.url }}">
   <img class="card-img-top" src="https://images.unsplash.com/photo-1592051148515-c5c06b3f919a?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1234&q=80" alt="Card image cap">
   <div class="card-body">
