--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -7,6 +7,10 @@
 
 
 <section class="pt-5 container">
+  <div class="row">
+    <h2 class="display-2 py-5"><span class="text-muted">Instruments</span></h2>
+
+  </div>
 
   {% for category in site.categories %}
   {% assign cat = category.title %}
