--- a/_includes/instrumentCard.html
+++ b/_includes/instrumentCard.html
@@ -10,7 +10,7 @@
     width: 100%;
 }
 </style>
-<div class="thumbnail text-center">
+<div class="card thumbnail text-center">
     <a href="{{ instrument.url }}">
     <img src="https://images.unsplash.com/photo-1592051148515-c5c06b3f919a?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1234&q=80g" alt="" class="img-responsive">
     <div class="caption">
