--- a/_includes/instrumentCard.html
+++ b/_includes/instrumentCard.html
@@ -10,12 +10,14 @@
     width: 100%;
 }
 </style>
-<div class="card thumbnail text-center">
+
+
+<div class="box thumbnail">
     <a href="{{ instrument.url }}">
-    <img src="https://images.unsplash.com/photo-1592051148515-c5c06b3f919a?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1234&q=80g" alt="" class="img-responsive">
-    <div class="caption">
+      <img src="https://images.unsplash.com/photo-1592051148515-c5c06b3f919a?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1234&q=80g"  class="img-gallery" />
+     </a>
+     <div class="caption">
         <p>{{ instrument.name }}</p>
         <p class="btn btn-outline-light"> Read more</p>
     </div>
-</a>
 </div>
