--- a/_includes/category.html
+++ b/_includes/category.html
@@ -11,7 +11,7 @@
             <div class="col-md-4">
                 <div class="row m-3">
                 <blockquote class="blockquote">
-                    <p class="">{{ category.blockquote.text }}</p>
+                    <p class="text-accent--light">{{ category.blockquote.text }}</p>
                     <footer class="blockquote-footer m-3"> 
                         {{ category.blockquote.author }},
                         <cite title="Source Title">
