--- a/_includes/instrumentCard.html
+++ b/_includes/instrumentCard.html
@@ -14,7 +14,7 @@
 
 <div class="box thumbnail">
     <a href="{{ instrument.url }}">
-      <img src="{{ instrument.images.thumbnail }}"  class="img-gallery" />
+      <img src="{{ site.baseurl}}/assets/images/instruments/{{ instrument.images.thumbnail }}"  class="img-gallery" />
      </a>
      <div class="caption text-center">
         <h5 class="text-uppercase">{{ instrument.name }}</h5>
