--- a/_includes/instrumentCard.html
+++ b/_includes/instrumentCard.html
@@ -15,9 +15,10 @@
 <div class="box thumbnail">
     <a href="{{ instrument.url }}">
       <img src="{{ site.baseurl}}/assets/images/instruments/{{ instrument.images.thumbnail }}"  class="img-gallery" />
-     </a>
      <div class="caption text-center">
-        <h5 class="text-uppercase">{{ instrument.name }}</h5>
+        <h5 class="text-uppercase display-4">{{ instrument.name }}</h5>
         <p class="btn btn-outline-light"> Read more</p>
     </div>
+</a>
+
 </div>
