--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -12,7 +12,7 @@
 
   </div>
 
-  {% for category in site.categories %}
+  {% for category in site.categories | sort: 'order' %}
   {% assign cat = category.title %}
   <section class="sec-category py-5">
   {% include category.html %}
