--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,12 +1,11 @@
  <!-- Footer -->
-        <footer class="px-md-5">
-        	<div class="footer-top">
+        <footer class="px-md-5 bg-accent--light">
+        	<div class="footer-top py-5">
 		        <div class="container">
 		        	<div class="row">
 		        		<div class="col-md-3 footer-about wow fadeInUp">
 		        			<h3>About</h3>
 		        			<p>
-		        				We are a young company always looking for new and creative ideas to help you with our products in your everyday work.
 		        			</p>
 		        			<p>{{ site.author.name }}</p>
 	                    </div>
@@ -31,11 +30,7 @@
       {% endfor %}
 	                    			
 	                    		</div>
-	                    		<div class="col-md-6">
-	                    			<p><a href="#">Plans &amp; pricing</a></p>
-	                    			<p><a href="#">Affiliates</a></p>
-	                    			<p><a href="#">Terms</a></p>
-	                    		</div>
+	                    
 	                    	</div>
 	                    </div>
 		            </div>
