--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
  <!-- Footer -->
-        <footer class="px-md-5 bg-accent--light">
-        	<div class="footer-top py-5">
+        <footer class="mx-md-5 bg-accent--light">
+        	<div class="footer-top py-5 mb-5 border-top">
 		        <div class="container">
 		        	<div class="row">
 		        		<div class="col-md-3 footer-about wow fadeInUp">
