--- a/_layouts/instrument.html
+++ b/_layouts/instrument.html
@@ -7,6 +7,9 @@
 <section class="container pt-5">
     {% include detailHero.html %}
 
+<div class="row my-5">
+    {% include breadcrumbs.html %}
+</div>
 
 <section class="row">
 
@@ -65,6 +68,8 @@
 
 
 </section>
+
+{% include footer.html %}
 
 </body>
 </html>
