--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
  <!-- Footer -->
-        <footer class="mx-md-5 bg-accent--light">
+        <footer class="mx-md-5">
         	<div class="footer-top py-5 mb-5 border-top">
 		        <div class="container">
 		        	<div class="row">
