--- a/_layouts/instrument.html
+++ b/_layouts/instrument.html
@@ -14,6 +14,11 @@
 <section class="row">
 
     <section class="col-md-5 border-right pr-5 text-muted">
+        <p class="p-5 border">
+            <span class="">{{page.construction.date.start}}</span>
+            <span class="text-muted">-</span>
+            <span class="">{{page.construction.date.end}}</span>
+        </p>
 
         <h4 class="mt-5">Neck</h4>
         <p>
@@ -23,11 +28,16 @@
             <span class="text-muted">; thickness:</span>
             <span>{{ page.construction.neck.thickness }}</span>
         </p>
-        <p>{{page.construction.fretboard.thickness}} fretboard in {{page.construction.fretboard.material}} <span class="text-muted">with a </span>{{page.construction.fretboard.radius}} <span class="text-muted">radius</span>. <span class="text-muted">Frets:</span> {{page.construction.fretboard.frets}}</p>
+        <p>{{page.construction.fretboard.thickness}} <span class="text-muted">fretboard in</span> {{page.construction.fretboard.material}} <span class="text-muted">with a </span>{{page.construction.fretboard.radius}} <span class="text-muted">radius</span>. <span class="text-muted">Frets:</span> {{page.construction.fretboard.frets}}</p>
         <h4 class="mt-5">Body</h4>
         <p>
-            {{page.construction.body.thickness}} <span class="text-muted">body in </span> {{page.construction.body.material }}.
+            {{page.construction.body.thickness}} <span class="text-muted">body in </span> {{page.construction.body.material }}<span class="text-muted">.</span>
         </p>
+
+        {% if page.construction.top %}
+            <p>{{page.construction.top.thickness}} <span class="text-muted">top in </span> {{page.construction.top.material}}<span class="text-muted">.</span></p>
+        {% endif %}
+            
         <h4 class="mt-5">Electronics</h4>
         <p>
             {{page.construction.electronics.wiring}}
@@ -42,6 +52,7 @@
         <h4 class="mt-5">Hardware</h4>
         <p class=""><span class="text-muted">Strap lock:</span>{{page.construction.hardware.locks}}</p>
         <p class=""><span class="text-muted">Bridge:</span>{{page.construction.hardware.bridge}}</p>
+        <p class=""><span class="text-muted">Locking:</span>{{page.construction.hardware.locking}}</p>
 
     </section>
 
